Update Phoenix Stores Crunching.ipynb

--- a/Phoenix Stores Crunching.ipynb
+++ b/Phoenix Stores Crunching.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps = googlemaps.Client(key = 'AIzaSyAo9-JJJObt_8YtQoiCPDjhk8rbq5fB7xg')"
+    "gmaps = googlemaps.Client(key = 'REDACTED')"
    ]
   },
   {
