Update Route Optimization Honors Final.ipynb

--- a/Route Optimization Honors Final.ipynb
+++ b/Route Optimization Honors Final.ipynb
@@ -55,8 +55,8 @@
     "import folium\n",
     "import polyline\n",
     "from IPython.display import Image, display\n",
-    "#log in using Jackson's API key below, or use your own.\n",
-    "gmaps = googlemaps.Client(key = 'AIzaSyAo9-JJJObt_8YtQoiCPDjhk8rbq5fB7xg')"
+    "#log in using your own API key.\n",
+    "gmaps = googlemaps.Client(key = '___')"
    ]
   },
   {
